// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select/> tests basic filter works: Filtered Menu 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target bp3-popover-open"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="Search..."
          style="padding-right: 0px;"
          type="text"
          value="cha"
        />
        <span
          class="bp3-input-action"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down main padding padding-small"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
    >
      <div
        class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="bp3-popover bp3-minimal bp3-select-popover popover"
        >
          <div
            class="bp3-popover-content"
          >
            <div>
              <ul
                class="bp3-menu"
              >
                <li
                  class="menuItem active"
                >
                  Charmander
                </li>
                <li
                  class="menuItem"
                >
                  Charmeleon
                </li>
                <li
                  class="menuItem"
                >
                  Charizard
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select/> tests basic filter works: Initial Menu 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target bp3-popover-open"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="Search..."
          style="padding-right: 0px;"
          type="text"
          value=""
        />
        <span
          class="bp3-input-action"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down main padding padding-small"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
    >
      <div
        class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="bp3-popover bp3-minimal bp3-select-popover popover"
        >
          <div
            class="bp3-popover-content"
          >
            <div>
              <ul
                class="bp3-menu"
              >
                <li
                  class="menuItem active"
                >
                  Bulbasaur
                </li>
                <li
                  class="menuItem"
                >
                  Ivysaur
                </li>
                <li
                  class="menuItem"
                >
                  Venusaur
                </li>
                <li
                  class="menuItem"
                >
                  Charmander
                </li>
                <li
                  class="menuItem"
                >
                  Charmeleon
                </li>
                <li
                  class="menuItem"
                >
                  Charizard
                </li>
                <li
                  class="menuItem"
                >
                  Squirtle
                </li>
                <li
                  class="menuItem"
                >
                  Wartortle
                </li>
                <li
                  class="menuItem"
                >
                  Blastoise
                </li>
                <li
                  class="menuItem"
                >
                  Caterpie
                </li>
                <li
                  class="menuItem"
                >
                  Metapod
                </li>
                <li
                  class="menuItem"
                >
                  Butterfree
                </li>
                <li
                  class="menuItem"
                >
                  Weedle
                </li>
                <li
                  class="menuItem"
                >
                  Kakuna
                </li>
                <li
                  class="menuItem"
                >
                  Beedrill
                </li>
                <li
                  class="menuItem"
                >
                  Pidgey
                </li>
                <li
                  class="menuItem"
                >
                  Pidgeotto
                </li>
                <li
                  class="menuItem"
                >
                  Pidgeot
                </li>
                <li
                  class="menuItem"
                >
                  Rattata
                </li>
                <li
                  class="menuItem"
                >
                  Raticate
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select/> tests no matching results: Filtered Menu 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target bp3-popover-open"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="Search..."
          style="padding-right: 0px;"
          type="text"
          value="abcde"
        />
        <span
          class="bp3-input-action"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down main padding padding-small"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
    >
      <div
        class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="bp3-popover bp3-minimal bp3-select-popover popover"
        >
          <div
            class="bp3-popover-content"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select/> tests works with async data 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="Search..."
          style="padding-right: 0px;"
          type="text"
          value=""
        />
        <span
          class="bp3-input-action"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down main padding padding-small"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select/> tests works with async data: Loading state 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target bp3-popover-open"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="Search..."
          style="padding-right: 0px;"
          type="text"
          value=""
        />
        <span
          class="bp3-input-action"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down main padding padding-small"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
    <div
      class="bp3-overlay bp3-overlay-open bp3-overlay-inline"
    >
      <div
        class="bp3-transition-container bp3-popover-appear bp3-popover-appear-active"
        style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
      >
        <div
          class="bp3-popover bp3-minimal bp3-select-popover popover"
        >
          <div
            class="bp3-popover-content"
          >
            <div>
              <ul
                class="bp3-menu"
              >
                <li
                  class="menuItem loading"
                >
                  Loading results...
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select/> tests works with static data 1`] = `
<div>
  <div
    class="bp3-popover-wrapper main bp3-fill"
  >
    <div
      class="bp3-popover-target"
    >
      <div
        class="bp3-input-group"
      >
        <input
          class="bp3-input"
          placeholder="Search..."
          style="padding-right: 0px;"
          type="text"
          value=""
        />
        <span
          class="bp3-input-action"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down main padding padding-small"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
